--- a/css/pronostics.css
+++ b/css/pronostics.css
@@ -51,7 +51,10 @@
 
 #championship .row-fluid [class*="span"],
 #day .row-fluid [class*="span"],
-#gameType .row-fluid [class*="span"]  {
+#gameType .row-fluid [class*="span"],
+#user .row-fluid [class*="span"],
+#associate .row-fluid [class*="span"],
+#game .row-fluid [class*="span"]  {
   margin-left: 0;
   margin-bottom : 10px;
 }
